--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@ body {
 }
 
 .date-input {
-  flex: 1;
+  width: 100%;
 }
 
 .passengers {
@@ -98,6 +98,7 @@ body {
   position: relative;
   display: flex;
   align-items: center;
+  flex: 1;
 }
 
 .calendar {
